# jtransc

./: .editorconfig  .gitattribute  .gitignore  .travis.yml  .travis.yml.old  Authors.md  CNAME  ChangeLog.md  NOTICE  NOTICE.txt  README.md  ROADMAP.md  appveyor.yml  appveyor.yml.notyet  build.gradle  deploy  deploy.bat  gradle.properties  include.gradle  includeCommon.gradle  includeNoKotlin.gradle  install_rt_and_core.bat  install_rt_and_core.sh  pom.xml  pom.xml.versionsBackup  settings.gradle  settings.xml  update_version.bat  update_version.sh
.github/workflows/: gradle.yml.old
_old/example1/: .gitignore  pom.xml
_old/experiments/: dt.kt  opcode.kt  ref.kt  ref2.kt  ref3.kt
_old/jtransc-lib-media/: pom.xml
_old/jtransc-rt-as3/: pom.xml
_old/jtransc-rt-js/: pom.xml
benchmark/: README.md  build.gradle  gradle.properties
benchmark/src/: Benchmark.java
benchmark/test/: MyTest.java
benchmark_kotlin_mpp/: build.gradle.kts  settings.gradle.kts
docs/: .gitignore  CNAME  _config.yml  index.html
docs/_includes/: head.html  toc.md
docs/_layouts/: default.html
docs/about/: index.md
docs/architecture/: index.md
docs/contributing/: index.md
docs/cookbook/: index.md
docs/css/: font-awesome.css  main.scss  search.css  simple-sidebar.css
docs/debugging/: index.md
docs/js/: navigation.js
docs/jtransc-rt-core/: index.md
docs/languages/: index.md
docs/libraries/: index.md
docs/minitemplates/: index.md
docs/plugins/: index.md
docs/search/: index.html
docs/static_init/: index.md
docs/targets/: index.md
docs/tutorials/: index.md
docs/usage/: index.md
examples/hello-world/: README.md  build.gradle  gradle.properties  pom.xml
examples/kotlin-sample/: build.gradle  gradle.properties
examples/libsdl/: build.gradle  gradle.properties
examples/scala-sample/: .gitignore  build.gradle  gradle.properties
gradle/wrapper/: gradle-wrapper.properties
inception/: pom.xml
inception/example/: Example.java
jtransc-annotations/: build.gradle
jtransc-asm/: NOTICE  build.gradle  pom.xml
jtransc-buildjar-maven-plugin/: .gitignore  build.gradle  pom.xml
jtransc-core/: .gitignore  build.gradle  pom.xml  pom.xml.versionsBackup
jtransc-core/test/: AstExampleTest.java  AstExampleTest2.java  ClassUtils.kt  demotest.kt  (+6 more)
jtransc-debugger/: build.gradle  pom.xml
jtransc-game/: pom.xml
jtransc-gen-as3/: build.gradle
jtransc-gen-common/: build.gradle  pom.xml
jtransc-gen-common-tests/: build.gradle
jtransc-gen-cpp/: README.md  build.gradle
jtransc-gen-cs/: build.gradle
jtransc-gen-d/: build.gradle
jtransc-gen-dart/: README.md  build.gradle
jtransc-gen-haxe/: build.gradle  pom.xml
jtransc-gen-js/: README.md  build.gradle  pom.xml
jtransc-gen-php/: build.gradle
jtransc-gradle-plugin/: build.gradle  pom.xml  publishPlugins
jtransc-intellij-plugin/: jtransc-intellij-plugin.ipr  jtransc-intellij-plugin.iws
jtransc-libgdx/: pom.xml
jtransc-main/: .gitignore  build.gradle  index.html  pom.xml
jtransc-main-run/: README.md  build.gradle  jtransc  jtransc.bat  pom.xml
jtransc-maven-plugin/: README.md  build.gradle  pom.xml
jtransc-rt/: build.gradle  pom.xml
jtransc-rt-core/: README.md  build.gradle  pom.xml
jtransc-rt-core-kotlin/: build.gradle
jtransc-rt-extended-charsets/: .gitignore  build.gradle
jtransc-rt-full/: README.md  pom.xml
jtransc-rt/resources/cpp/: Base.cpp  CMakeLists.txt  GC.cpp  GC_boehm.cpp  GC_portable.cpp  JNI.cpp  combined_jni.h
jtransc-tools/: pom.xml
jtransc-utils/: build.gradle  pom.xml
(+2353 files in other folders)
